--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -155,7 +155,7 @@
       </div>
     </section>
     <!-- Gallery Section -->
-    <section class="gallery" id="gallery">
+    <section class="gallery" id="Gallery">
       <img
         src="images/total-1_image.jpg"
         alt="gallery-image"
@@ -188,7 +188,7 @@
       />
     </section>
     <!-- Team Section -->
-    <section class="team" id="team">
+    <section class="team" id="Blog">
       <div class="team-heading">
         <span class="team-head">Meet Our Experienced Team</span>
       </div>
@@ -310,11 +310,11 @@
             <span class="contact-card-head-link">Quick Links</span>
             <ul class="contact-list">
               <li><a href="#Home">Home</a></li>
-              <li><a href="#about">Slider</a></li>
-              <li><a href="#project">Portfolio</a></li>
-              <li><a href="#work">Page</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#team">Blog</a></li>
+              <li><a href="#Slider">Slider</a></li>
+              <li><a href="#Portfolio">Portfolio</a></li>
+              <li><a href="#Page">Page</a></li>
+              <li><a href="#Gallery">Gallery</a></li>
+              <li><a href="#Blog">Blog</a></li>
             </ul>
           </div>
           <div class="contact-card">
